# sensewatch

./: .gitignore  README.md  config.example.json  pyproject.toml
sensewatch/: __init__.py  __main__.py  api_client.py  app.py  auth.py  bridge.py  config.py  easter_eggs.py  icon.py  log_viewer.py  menu_builder.py  notifier.py  poller.py  state.py
sensewatch/panel/: app.js  index.html  style.css
tests/: test_easter_eggs.py  test_state.py
